- Fixed bug #11924 (ibase_query() and ibase_execute() mangled passed   parameter variables)